src/containers/User/Detail/Identity/Identity.module.css
.fieldHeading {
  display: block;
}

.identityList {
  padding: 0;
  margin-block-start: 1rem;
  padding-inline-start: 1.5rem;
  position: relative;
}

.buttonsWrapper {
  display: flex;
}

.spinnerWrapper {
  display: flex;
  height: 100%;
  justify-content: center;
  align-items: center;
}

/* EXTRA SMALL */
@media screen and (max-width: 400px) {
  .buttonsWrapper {
    flex-direction: column;
    align-items: flex-start;
  }

  .buttonsWrapper > a, .buttonsWrapper > button {
    margin: 1rem 0 0 0 !important;
  }
}

